@@ -12,24 +12,157 @@ import java.util.List;
 import static org.springframework.data.mongodb.core.aggregation.Aggregation.match;
 
 public class SearchAggregationUtils {
-  // Add string field called cmsIdDisplay. If model is QI-Core, append "FHIR" to measureSet
-  // .cmsId, else only convert measureSet.cmsId to a string
+  // Add string field called cmsIdDisplay. The CMS ID is zero-padded to 4 digits
+  // for display & search consistency. Values wider than 4 digits
+  // are left as-is. For QI-Core measures the "FHIR" suffix is appended.
+  // When cmsId is null/missing, cmsIdDisplay is null (so search doesn't match).
   public static AggregationOperation addCmsIdDisplayField() {
+    Document safeCmsIdString =
+        new Document("$ifNull", Arrays.asList(new Document("$toString", "$measureSet.cmsId"), ""));
+    Document cmsIdStrLen = new Document("$strLenCP", safeCmsIdString);
+    Document padCount =
+        new Document(
+            "$max", Arrays.asList(0, new Document("$subtract", Arrays.asList(4, cmsIdStrLen))));
+    Document paddedCmsId =
+        new Document(
+            "$concat",
+            Arrays.asList(
+                new Document("$substrCP", Arrays.asList("0000", 0, padCount)), safeCmsIdString));
+
+    Document paddedWithOptionalFhirSuffix =
+        new Document(
+            "$cond",
+            List.of(
+                new Document(
+                    "$regexMatch", new Document("input", "$model").append("regex", "QI-Core")),
+                new Document("$concat", Arrays.asList(paddedCmsId, "FHIR")),
+                paddedCmsId));
+
+    Document cmsIdDisplayExpr =
+        new Document(
+            "$cond",
+            Arrays.asList(
+                new Document("$gt", Arrays.asList("$measureSet.cmsId", null)),
+                paddedWithOptionalFhirSuffix,
+                null));
+
+    return context -> new Document("$addFields", new Document("cmsIdDisplay", cmsIdDisplayExpr));
+  }
+
+  // Add boolean field component: true if compositeMeasureIds is not null and not empty
+  public static AggregationOperation addIsComponentField() {
     return context ->
         new Document(
             "$addFields",
             new Document(
-                "cmsIdDisplay",
+                "component",
                 new Document(
-                    "$cond",
-                    List.of(
+                    "$gt",
+                    Arrays.asList(
                         new Document(
-                            "$regexMatch",
-                            new Document("input", "$model").append("regex", "QI-Core")),
+                            "$size",
+                            new Document(
+                                "$ifNull",
+                                Arrays.asList("$compositeMeasureIds", Collections.emptyList()))),
+                        0))));
+  }
+
+  /**
+   * Adds a numeric field {@code draftSortOrder} (1–5) used for custom draft-based sorting:
+   *
+   * <ol>
+   *   <li>Non-composite versioned (draft=false, composite=false, compositeMeasureIds empty/null)
+   *   <li>Composite versioned (draft=false, composite=true)
+   *   <li>In-composite versioned component (draft=false, compositeMeasureIds non-empty)
+   *   <li>Draft (draft=true, composite=false)
+   *   <li>Composite draft (draft=true, composite=true)
+   * </ol>
+   *
+   * Sort ASC on this field to get the order 1→5 (versioned first); DESC to get 5→1 (composite draft
+   * first).
+   */
+  public static AggregationOperation addDraftSortOrderField() {
+    // Helper expression: compositeMeasureIds array size > 0
+    Document hasCompositeMeasureIds =
+        new Document(
+            "$gt",
+            Arrays.asList(
+                new Document(
+                    "$size",
+                    new Document(
+                        "$ifNull", Arrays.asList("$compositeMeasureIds", Collections.emptyList()))),
+                0));
+
+    Document switchExpr =
+        new Document(
+            "$switch",
+            new Document(
+                    "branches",
+                    Arrays.asList(
+                        // 1: versioned, not composite, not a component
                         new Document(
-                            "$concat",
-                            List.of(new Document("$toString", "$measureSet.cmsId"), "FHIR")),
-                        new Document("$toString", "$measureSet.cmsId")))));
+                                "case",
+                                new Document(
+                                    "$and",
+                                    Arrays.asList(
+                                        new Document(
+                                            "$eq", Arrays.asList("$measureMetaData.draft", false)),
+                                        new Document(
+                                            "$ne",
+                                            Arrays.asList("$measureMetaData.composite", true)),
+                                        new Document(
+                                            "$not", Arrays.asList(hasCompositeMeasureIds)))))
+                            .append("then", 1),
+                        // 2: composite versioned
+                        new Document(
+                                "case",
+                                new Document(
+                                    "$and",
+                                    Arrays.asList(
+                                        new Document(
+                                            "$eq",
+                                            Arrays.asList("$measureMetaData.composite", true)),
+                                        new Document(
+                                            "$eq",
+                                            Arrays.asList("$measureMetaData.draft", false)))))
+                            .append("then", 2),
+                        // 3: versioned component (in composite)
+                        new Document(
+                                "case",
+                                new Document(
+                                    "$and",
+                                    Arrays.asList(
+                                        new Document(
+                                            "$eq", Arrays.asList("$measureMetaData.draft", false)),
+                                        hasCompositeMeasureIds)))
+                            .append("then", 3),
+                        // 4: draft, not composite
+                        new Document(
+                                "case",
+                                new Document(
+                                    "$and",
+                                    Arrays.asList(
+                                        new Document(
+                                            "$eq", Arrays.asList("$measureMetaData.draft", true)),
+                                        new Document(
+                                            "$ne",
+                                            Arrays.asList("$measureMetaData.composite", true)))))
+                            .append("then", 4),
+                        // 5: composite draft
+                        new Document(
+                                "case",
+                                new Document(
+                                    "$and",
+                                    Arrays.asList(
+                                        new Document(
+                                            "$eq",
+                                            Arrays.asList("$measureMetaData.composite", true)),
+                                        new Document(
+                                            "$eq", Arrays.asList("$measureMetaData.draft", true)))))
+                            .append("then", 5)))
+                .append("default", 4));
+
+    return context -> new Document("$addFields", new Document("draftSortOrder", switchExpr));
   }
 
   // aggregation operation to filter measures based on allowed scoring types
